fix the word on hover on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -191,6 +191,8 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  position: relative;
+  left: 1vw;
 }
 
 .title {
@@ -375,13 +377,11 @@ button {
 
 .close {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  font-weight: bold;
   cursor: pointer;
   width: 2vw;
-  font-size: 2vw;
+  color: black;
 }
+ 
 
 .main {
   position: relative;
@@ -457,6 +457,12 @@ button {
   transform: translateY(20px);
   transition: transform 0.25s;
 }
+
+h3{
+  font-size: 2vw;
+  font-weight: 500;
+}
+
 
 
 }
